added circular stuff

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <script src="symmedian.js"></script>
   <script src="draw.js"></script>
   <script src="colors.js"></script>
+  <script str="eelipse-mounted.js"></script>
   <script src="sketch.js"></script>
   <div id="ui"></div>
   <div id="canvas"></div>
