--- a/index.html
+++ b/index.html
@@ -51,12 +51,12 @@
         <script>show_slider_output_value("input_Xn3","demo_Xn3")</script>
         
         <!--dropdown-->
-        <p>degStep0</p>
-        <select id="aStep">
+        <p>animStep0</p>
+        <select id="animStep0">
+          <option value="0.125">0.125</option>
+          <option value="0.25">0.25</option>
+          <option value="0.5">0.5</option>
           <option value="1">1</option>
-          <option value="0.1">0.1</option>
-          <option value="0.5">0.05</option>
-          <option value="0.01">0.01</option>
         </select>
         
       </div>
