added export png feature

--- a/index.html
+++ b/index.html
@@ -144,7 +144,9 @@
         <script>show_slider_output_value("input_Xn3","demo_Xn3")</script>
         
         <button id="play_pause" class="width100">Pause</button>
-        <button id="reverse" class="width100">Reverse</button>
+        <button id="reverse" class="width100">Backward</button>
+        <button id="Export_PNG" class="width100">Export PNG</button>
+        <a id="link"></a>
 
         <div class="line"></div>
 
