--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="math.js"></script>
   <script src="ui.js"></script>
   <script src="trilins_final.js"></script>
+  <script src="non_tri_ctr.js"></script>
   <script src="vertices.js"></script>
   <script src="triangles.js"></script>
   <script src="billiard.js"></script>
