--- a/index.html
+++ b/index.html
@@ -41,15 +41,15 @@
           <script>show_slider_output_value("input_a","demo_a")</script>
         </div>
         <!--component xn1_selector-->
-        <my-selector number='1'></my-selector>
+        <my-selector number='1' selected=true></my-selector>
         <!--end component xn1_selector-->
 
         <!--component xn2_selector-->
-        <my-selector number='2'></my-selector>
+        <my-selector number='2' selected=false></my-selector>
         <!--end component xn2_selector-->
 
         <!--component xn3_selector-->
-        <my-selector number='3'></my-selector>
+        <my-selector number='3' selected=false></my-selector>
         <!--end component xn3_selector-->
 
         <!--dropdown-->
