--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="triangles.js"></script>
   <script src="billiard.js"></script>
   <script src="symmedian.js"></script>
+  <script src="locus.js"></script>
 
 <section class="grid-container">
 	<div class="item title">
