--- a/index.html
+++ b/index.html
@@ -39,7 +39,6 @@
         <div class="selector_input">
           <p>a/b: <span id="demo_a"></span></p>
           <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="input_a">
-          <script>show_slider_output_value("input_a","demo_a")</script>
         </div>
         <!--component xn1_selector-->
         <my-selector number='1' selected=true></my-selector>
@@ -58,19 +57,9 @@
           <p class="selector_name">animStep0</p>
           <select id="input_animStep0" class="width100">
             <option value="0.125">0.125</option>
-            <option value="0.25">0.25</option>
+            <option value="0.25" selected="selected">0.25</option>
             <option value="0.5">0.5</option>
             <option value="1">1</option>
-          </select>
-        </div>
-
-        <div class="selector_input">
-          <p class="selector_name">degStep0</p>
-          <select id="input_degStep0" class="width100">
-            <option value="1">1</option>
-            <option value="0.1">0.1</option>
-            <option value="0.05">0.05</option>
-            <option value="0.01">0.01</option>
           </select>
         </div>
         <!--end drop down*/-->
