--- a/index.html
+++ b/index.html
@@ -57,9 +57,19 @@
           <p class="selector_name">animStep0</p>
           <select id="input_animStep0" class="width100">
             <option value="0.125">0.125</option>
-            <option value="0.25" selected="selected">0.25</option>
+            <option value="0.25">0.25</option>
             <option value="0.5">0.5</option>
             <option value="1">1</option>
+          </select>
+        </div>
+
+        <div class="selector_input">
+          <p class="selector_name">degStep0</p>
+          <select id="input_degStep0" class="width100">
+            <option value="1">1</option>
+            <option value="0.1">0.1</option>
+            <option value="0.05">0.05</option>
+            <option value="0.01">0.01</option>
           </select>
         </div>
         <!--end drop down*/-->
