--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="p5.min.js"></script>
   <script src="sprintf.js"></script>
   <script src="p5.dom.min.js"></script>
+  <script src="html2canvas.min.js"></script>
   <script src="quicksettings.min.js"></script>
   <script src="p5.gui.js" type="text/javascript"></script>
   <!--Components-->
@@ -37,8 +38,10 @@
         <!--sliders-->
         <!--Functions show_slider_output_value, -->
         <div class="selector_input">
-          <p>a/b: <span id="demo_a"></span></p>
-          <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="input_a">
+          <p class='input_Xn'>a/b: <span id="demo_a"></span></p>
+          <div class='input_Xn'>
+            <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="input_a">
+          </div>
         </div>
         <!--component xn1_selector-->
         <my-selector number='1' selected=true></my-selector>
@@ -54,22 +57,12 @@
 
         <!--dropdown-->
         <div class="selector_input">
-          <p class="selector_name">animStep0</p>
-          <select id="input_animStep0" class="width100">
+          <p class="selector_name input_Xn">animStep0</p>
+          <select id="input_animStep0" class="width100 input_Xn">
             <option value="0.125">0.125</option>
             <option value="0.25">0.25</option>
             <option value="0.5">0.5</option>
             <option value="1">1</option>
-          </select>
-        </div>
-
-        <div class="selector_input">
-          <p class="selector_name">degStep0</p>
-          <select id="input_degStep0" class="width100">
-            <option value="1">1</option>
-            <option value="0.1">0.1</option>
-            <option value="0.05">0.05</option>
-            <option value="0.01">0.01</option>
           </select>
         </div>
         <!--end drop down*/-->
