--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
         <div class="selector_input">
           <p class='input_Xn'>a/b: <span id="demo_a"></span></p>
           <div class='input_Xn'>
-            <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="input_a">
+            <div class='slider_container'>
+              <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="input_a">
+            </div>
           </div>
         </div>
         <!--component xn1_selector-->
