--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <p class="selector_name input_Xn">animStep0</p>
           <select id="input_animStep0" class="width100 input_Xn">
             <option value="0.125">0.125</option>
-            <option value="0.25">0.25</option>
+            <option value="0.25" selected="selected">0.25</option>
             <option value="0.5">0.5</option>
             <option value="1">1</option>
           </select>
