--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
   <script src="locus.js"></script>
 
 <section class="grid-container">
+  <div class="item config_buttons">
+    <button>reset UI</button>
+    <button>config URL</button>
+  </div>
 	<div class="item title">
     <div id="ui"></div>
   </div>
@@ -58,13 +62,12 @@
         <!--end component xn3_selector-->
 
         <!--dropdown-->
-        <div class="selector_input">
-          <p class="selector_name input_Xn">animStep0</p>
-          <select id="input_animStep0" class="width100 input_Xn">
-            <option value="0.125">0.125</option>
-            <option value="0.25" selected="selected">0.25</option>
-            <option value="0.5">0.5</option>
-            <option value="1">1</option>
+        <div class="input_Xn" id='speed_box'>
+          <label for="input_animStep0"> Speed: </label>
+          <select id="input_animStep0" name="input_animStep0">
+            <option value="0.125">slow</option>
+            <option value="0.5">medium</option>
+            <option value="1">fast</option>
           </select>
         </div>
         <!--end drop down*/-->
