--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 <body oncontextmenu="return false;">
   
   <script src="math.js"></script>
+  <script src="poly.js"></script>
   <script src="ui.js"></script>
   <script src="trilins_final.js"></script>
   <script src="non_tri_ctr.js"></script>
