copy image button added

--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
           <button class="fa fa-forward" id="forward"></button>
         </div>
         <!--end play contorls-->
-        <div id="export_button">
-          <button id="Export_PNG" class="width100">Export PNG</button>
+        <div class='input_Xn'>
+          <button class='image_export' id="copy_image">copy image</button>
+          <button class='image_export' id="Export_PNG">Export PNG</button>
           <a id="link"></a>
         </div>
 
