--- a/index.html
+++ b/index.html
@@ -33,7 +33,10 @@
 
 <section class="grid-container">
   <div class="item config_buttons">
-    <button id='reset_UI'>reset UI</button>
+    <div style="display: flex; flex-direction: column;">
+      <button id='reset_UI' style="flex-grow: 1;">reset UI</button>
+      <button id='recenter'>recenter</button>  
+    </div>
     <button id='config_URL'>copy config URL</button>
   </div>
 	<div class="item title">
