testing twitter share

--- a/index.html
+++ b/index.html
@@ -16,6 +16,13 @@
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="utf-8">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:site" content="@nytimes">
+  <meta name="twitter:creator" content="@SarahMaslinNir">
+  <meta name="twitter:title" content="Parade of Fans for Houston’s Funeral">
+  <meta name="twitter:description" content="NEWARK - The guest list and parade of limousines with celebrities emerging from them seemed more suited to a red carpet event in Hollywood or New York than than a gritty stretch of Sussex Avenue near the former site of the James M. Baxter Terrace public housing project here.">
+  <meta name="twitter:image" content="http://graphics8.nytimes.com/images/2012/02/19/us/19whitney-span/19whitney-span-articleLarge.jpg">
 </head>
 
 <body oncontextmenu="return false;">
@@ -36,6 +43,9 @@
     <div style="display: flex; flex-direction: column;">
       <button id='reset_UI' style="flex-grow: 1;">reset UI</button>
       <button id='recenter'>recenter</button>  
+      <!--<a href="https://twitter.com/intent/tweet" class="twitter-share-button" target="_blank" data-text="Hi! I think that" data-url="https://github.com.br" data-via="DReznik" data-hashtags="ellipses" data-lang="en" data-show-count="false"><img src="ellipse.png"/></a>-->
+      <!--<a href="https://twitter.com/intent/tweet?url=myUrl&text=myTitle" target="_blank" class="twitter-share-button"><img src="ellipse.png"/> </a>
+      <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>-->
     </div>
     <button id='config_URL'>copy config URL</button>
   </div>
