--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <script src="non_tri_ctr.js"></script>
   <script src="vertices.js"></script>
   <script src="triangles.js"></script>
-  <script src="billiard.js"></script>
+  <script src="poncelet.js"></script>
   <script src="symmedian.js"></script>
   <script src="locus.js"></script>
 
