--- a/index.html
+++ b/index.html
@@ -58,15 +58,15 @@
           </div>
           <div class='input_Xn'>
             <div>
-              <input class = "sub_checkbox" type="checkbox" id="anim_a" `+tri_selected+` name="anima">
+              <input class = "sub_checkbox" type="checkbox" id="a_anim" name="anima">
               <label for="anim_a"> Anim</label>
             </div>
             <div>
               <label for="speed_a"> Speed </label>
-              <select id="speed_a" name="speed_a">
-                <option value="0.125">slow</option>
-                <option value="0.5">med</option>
-                <option value="1">fast</option>
+              <select id="a_speed" name="speed_a">
+                <option value="0.005">slow</option>
+                <option value="0.01">med</option>
+                <option value="0.05">fast</option>
               </select>
             </div>
           </div>
