--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="poncelet.js"></script>
   <script src="symmedian.js"></script>
   <script src="locus.js"></script>
+  <script src="caustic.js"></script>
 
 <section class="grid-container">
   <div class="item config_buttons">
