a_min a_max text_input working

--- a/index.html
+++ b/index.html
@@ -61,18 +61,17 @@
             </div>
           </div>
           <div class='input_Xn'>
-            <div>
-              <input class = "sub_checkbox" type="checkbox" id="a_anim" name="anima">
-              <label for="anim_a"> Anim</label>
-            </div>
-            <div>
-              <label for="speed_a"> Speed </label>
-              <select id="a_speed" name="speed_a">
-                <option value="0.005">slow</option>
-                <option value="0.01">med</option>
-                <option value="0.05">fast</option>
-              </select>
-            </div>
+            <label for="anim_a"> Anim</label>
+            <input class = "sub_checkbox" type="checkbox" id="a_anim" name="anima">
+            <select id="a_speed">
+              <option value="0.005">slow</option>
+              <option value="0.01">med</option>
+              <option value="0.05">fast</option>
+            </select>
+            <label for="min_a"> de</label>
+            <input type="text" class="a_text_input" value="1.001" name="min_a" id='a_min'>
+            <label for="max_a"> a</label>
+            <input type="text" class="a_text_input" value="4.000" name="max_a" id='a_max'>      
           </div>
         </div>
         <!--component xn1_selector-->
