--- a/index.html
+++ b/index.html
@@ -61,10 +61,10 @@
             </div>
           </div>
           <div class='input_Xn'>
-            <label for="ell"> ell</label>
+            <label for="ell">ell</label>
             <input class = "sub_checkbox" type="checkbox" id="ell" name="ell">
             <select id="a_speed">
-              <option value="0.000">Anim</option>
+              <option value="0.000">anim</option>
               <option value="0.005">slow</option>
               <option value="0.01">med</option>
               <option value="0.05">fast</option>
