--- a/index.html
+++ b/index.html
@@ -61,8 +61,10 @@
             </div>
           </div>
           <div class='input_Xn'>
-            <label for="ell">ell</label>
-            <input class = "sub_checkbox" type="checkbox" id="ell" name="ell">
+            <div>
+              <label for="ell">ell</label>
+              <input class = "sub_checkbox" type="checkbox" id="ell" name="ell">
+            </div>
             <select id="a_speed">
               <option value="0.000">anim</option>
               <option value="0.005">slow</option>
@@ -76,7 +78,7 @@
           </div>
         </div>
         <!--component xn1_selector-->
-        <my-selector id='component_1' number='1' selected=true color='rgb(0,0,240)'></my-selector>
+        <my-selector id='component_1' number='1' selected=true color='rgb(240,0,0)'></my-selector>
         <!--end component xn1_selector-->
 
         <!--component xn2_selector-->
@@ -84,7 +86,7 @@
         <!--end component xn2_selector-->
 
         <!--component xn3_selector-->
-        <my-selector id='component_3' number='3' selected=false color='rgb(240,0,0)'></my-selector>
+        <my-selector id='component_3' number='3' selected=false color='rgb(0,0,240)'></my-selector>
         <!--end component xn3_selector-->
 
         <!--dropdown-->
