few changes css

--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
               <option value="0.01">med</option>
               <option value="0.05">fast</option>
             </select>
-            <label for="min_a"> de</label>
+            <label for="min_a"> min</label>
             <input type="text" class="a_text_input" value="1.001" name="min_a" id='a_min'>
-            <label for="max_a"> a</label>
+            <label for="max_a"> max</label>
             <input type="text" class="a_text_input" value="4.000" name="max_a" id='a_max'>      
           </div>
         </div>
