added trunc to json

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <!--dropdown-->
         <div class="input_Xn" id='speed_box'>
-          <label for="animStep0"> Speed: </label>
+          <label for="animStep0">speed</label>
           <select id="animStep0" name="animStep0">
             <option value="0.125">slow</option>
             <option value="0.5">medium</option>
@@ -107,8 +107,8 @@
         </div>
         <!--end drop down*/-->
         <div class='input_Xn'>
-          <button class='export' id="Export_JSON">Export JSON</button>
-          <button class='export' id="Export_PNG">Export PNG</button>
+          <button class='export' id="Export_PNG">export png</button>
+          <button class='export' id="Export_JSON">export json</button>
         </div>
 
       <div id="made_by"></div>
