--- a/index.html
+++ b/index.html
@@ -123,5 +123,9 @@
   <script src="colors.js"></script>
   <script src="ellipse-mounted.js"></script>
   <script src="sketch.js"></script>
+  <!-- <script src="gauss-jordan.js"></script> -->
+  <script src="https://enkimute.github.io/res/linalg.min.js"></script>
+  <script src="ellipse-detect.js"></script>
+  
 
 </body></html>
