--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
-<!--<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.10.2/p5.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/sprintf/1.1.1/sprintf.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/quicksettings@latest/quicksettings.min.js"></script>
-  <script src="p5.gui.js"></script>-->
-  <!DOCTYPE html><html>
+<!DOCTYPE html>
+<html>
 <head>
   <script src="p5.min.js"></script>
   <script src="sprintf.js"></script>
