--- a/index.html
+++ b/index.html
@@ -68,10 +68,12 @@
               <option value="0.010">med</option>
               <option value="0.050">fast</option>
             </select>
-            <label for="min_a"> min</label>
-            <input type="text" class="a_text_input" value="1.001" name="min_a" id='a_min'>
-            <label for="max_a"> max</label>
-            <input type="text" class="a_text_input" value="4.000" name="max_a" id='a_max'>      
+            <div>
+              <label for="min_a"> min</label>
+              <input type="text" class="a_text_input" value="1.001" name="min_a" id='a_min'>
+              <label for="max_a"> max</label>
+              <input type="text" class="a_text_input" value="4.000" name="max_a" id='a_max'>
+            </div>
           </div>
         </div>
         <!--component xn1_selector-->
@@ -84,6 +86,10 @@
 
         <!--component xn3_selector-->
         <my-selector id='component_3' number='3' selected=false color='rgb(0,0,240)'></my-selector>
+        <!--end component xn3_selector-->
+
+        <!--component xn3_selector-->
+        <my-selector id='component_4' number='4' selected=false color='rgb(128,0,128)'></my-selector>
         <!--end component xn3_selector-->
 
         <!--dropdown-->
