transitioning to barycentrics, problem w brocards

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <script src="math.js"></script>
   <script src="poly.js"></script>
   <script src="ui.js"></script>
-  <script src="trilins_final.js"></script>
+  <script src="trilins_final_1k.js"></script>
   <script src="non_tri_ctr.js"></script>
   <script src="vertices.js"></script>
   <script src="triangles.js"></script>
