--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
               <input class = "sub_checkbox" type="checkbox" id="ell" name="ell">
             </div>
             <select id="a_speed">
-              <option value="0.000">anim</option>
-              <option value="0.005">slow</option>
-              <option value="0.010">med</option>
-              <option value="0.050">fast</option>
+              <option value=0>anim</option>
+              <option value=0.005>slow</option>
+              <option value=0.010>med</option>
+              <option value=0.050>fast</option>
             </select>
             <div>
               <label for="min_a"> min</label>
