--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
   <script src="math.js"></script>
   <script src="poly.js"></script>
   <script src="ui.js"></script>
-  <script src="trilins_final_1k.js"></script>
+  <script src="trilins_barys.js"></script> 
+  <script src="xn_1k.js"></script>
   <script src="non_tri_ctr.js"></script>
   <script src="vertices.js"></script>
   <script src="triangles.js"></script>
