--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <script src="sprintf.js"></script>
   <script src="p5.dom.min.js"></script>
   <script src="html2canvas.min.js"></script>
-  <script src="quicksettings.min.js"></script>
-  <script src="p5.gui.js" type="text/javascript"></script>
+  <!-- <script src="quicksettings.min.js"></script> -->
+  <!-- <script src="p5.gui.js" type="text/javascript"></script> -->
   <!--Components-->
   <script src="components.js"></script>
     
