shortened tri names

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <label for="animStep0">speed</label>
           <select id="animStep0" name="animStep0">
             <option value="0.125">slow</option>
-            <option value="0.500">medium</option>
+            <option value="0.500">med</option>
             <option value="1.000">fast</option>
           </select>
           <!--play controls-->
