a_input textbox added

--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
         <!--Functions show_slider_output_value, -->
         <div class="selector_input">
           <div class='input_Xn'>
-            <p class='input_Xn'>a/b: <span id="demo_a"></span></p>
+            <label for="a_input_text">a/b</label>
+            <input type="text" class="demo_Xn" id='a_input_text' value=1.168 name='a_input_text'>
             <div class='slider_container'>
               <input type="range" min=1.001 max=4 value=1.618 step=0.001 class="slider" id="a">
             </div>
