--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@
             </div>
           </div>
           <div class='input_Xn'>
-            <select id="a_speed">
-              <option value=0>anim</option>
+            <label for="anim_a">anim</label>
+            <select id="a_speed" name='anim_a'>
+              <option value=0>off</option>
               <option value=0.005>slow</option>
               <option value=0.010>med</option>
               <option value=0.050>fast</option>
@@ -102,9 +103,9 @@
         <!--Tandem bar-->
         <div class="selector_input">
           <div class="input_Xn">
-            Tandem bar
-          </div>
-          <div class="input_Xn">
+            <div>
+              tandem:
+            </div>
             <div>
               <label for="Tandem loc">loc</label>
               <input class = "sub_checkbox" type="checkbox" id="tandem_loc" name="Tandem loc">
@@ -148,10 +149,10 @@
             <div>
               <label for="rot">rot</label>
               <select id="rot" name="rot">
-                <option value="0">0</option>
-                <option value="90">90</option>
-                <option value="180">180</option>
-                <option value="270">270</option>
+                <option value="0">off</option>
+                <option value="90">90°</option>
+                <option value="180">180°</option>
+                <option value="270">270°</option>
               </select>            
             </div>
             <div>
