change backgroung color w

--- a/index.html
+++ b/index.html
@@ -164,13 +164,9 @@
                 <option value="100">100</option>
               </select>            
             </div>
-            <div>
+            <div style="display: flex; justify-content: center; align-items: center;">
               <label for="bg">bg</label>
-              <select class="greenText" id="bg" name="bg" onchange="this.className=this.options[this.selectedIndex].className">
-                <option class="greenText" value="**"></option>
-                <option class="redText" value="**"></option>
-                <option class="blueText" value="**"></option>
-              </select>            
+              <input id='bg' name="bg" type="color"/>         
             </div>
           </div>
         </div>
