--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
         <!--Tandem bar-->
         <div class="selector_input">
           <div class="input_Xn">
-            <div>
-              tandem:
+            <div style="font-size: 17px;">
+              tandem
             </div>
             <div>
               <label for="Tandem loc">loc</label>
