some bugs fixed

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <script src="poncelet.js"></script>
   <script src="symmedian.js"></script>
   <script src="caustic.js"></script>
+  <script src="export.js"></script>
   <script src="locus.js"></script>
   <script src="draw.js"></script>
   <script src="colors.js"></script>
