--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <!-- <script src="gauss-jordan.js"></script> -->
   <script src="https://enkimute.github.io/res/linalg.min.js"></script>
   <script src="ellipse-detect.js"></script>
-  <script str="simple-polygon.js"></script>
+  <script src="simple-polygon-b.js"></script>
 
 <section class="grid-container">
   <div class="item config_buttons">
