ell_detect refactor

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script src="locus.js"></script>
   <script src="draw.js"></script>
   <script src="colors.js"></script>
+  <script src="colors_crayola.js"></script>
   <script src="ellipse-mounted.js"></script>
   <script src="sketch.js"></script>
   <!-- <script src="gauss-jordan.js"></script> -->
