corrected bug url dr1

--- a/index.html
+++ b/index.html
@@ -57,7 +57,14 @@
 
   </div>
 	<div class="item title">
-    <div id="ui"></div>
+    <div id="ui">
+      <div class='lab' style='text-slign: center'>
+        <p style='color: blue'>
+           Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/>Learn more</a>)
+        </p>
+     </div>
+     <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p>
+    </div>
   </div>
 	<div class="item selector">
 
