--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
   </div>
 	<div class="item title">
     <div id="ui">
-      <div class='lab' style='text-slign: center'>
+      <div class='lab' style='text-align: center'>
         <p style='color: blue'>
            Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/>Learn more</a>)
         </p>
