--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <div id="ui">
       <div class='lab' style='text-align: center'>
         <p style='color: blue'>
-           Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/>Learn more</a>)
+           Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
         </p>
      </div>
      <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p>
