new feature: color locus

--- a/index.html
+++ b/index.html
@@ -10,6 +10,28 @@
   <!--Components-->
   <script src="components.js"></script>
     
+  <!--for changing slider thumb clr-->
+  <style data="Xn1">
+    #Xn1::-webkit-slider-thumb{
+      background: red;
+    }
+  </style>
+  <style data="Xn2">
+    #Xn2::-webkit-slider-thumb{
+      background: white;
+    }
+  </style>
+  </style>
+  <style data="Xn3">
+    #Xn3::-webkit-slider-thumb{
+      background: blue;
+    }
+  </style>
+  <style data="Xn4">
+    #Xn4::-webkit-slider-thumb{
+      background: green;
+    }
+  </style>
   <link rel="stylesheet" type="text/css" href="style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <meta charset="utf-8">
@@ -177,7 +199,7 @@
             </div>
             <div style="display: flex; justify-content: center; align-items: center;">
               <label for="bg">bg</label>
-              <input id='bg' name="bg" type="color" value="#050519"></input>
+              <input class='bg' id='bg' name="bg" type="color" value="#050519"></input>
             </div>
           </div>
         </div>
