label clr removed

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--Components-->
   <script src="components.js"></script>
     
-  <!--for changing slider thumb clr-->
+  <!--changing slider thumb clr-->
   <style data="Xn1">
     #Xn1::-webkit-slider-thumb{
       background: red;
