--- a/index.html
+++ b/index.html
@@ -78,13 +78,16 @@
     </div>
 
   </div>
+  <div class="item jukebox">
+    <input type="image" id="jukebox" style="margin-left:2px;height:50px;width:50px;" src="jukebox.png"/>
+  </div>
 	<div class="item title">
     <div id="ui">
       <div class='lab' style='text-align: center'>
         <p style='color: blue'>
            Loci of Centers of Ellipse-Mounted Triangles  (<a href=https://dan-reznik.github.io/ellipse-mounted-triangles/ style="color: red;">Learn more</a>)
         </p>
-     </div>
+      </div>
      <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p>
     </div>
   </div>
