--- a/index.html
+++ b/index.html
@@ -78,8 +78,13 @@
     </div>
 
   </div>
-  <div class="item jukebox">
+  <div class="item jukebox" style="display: inline-flex;">
     <input type="image" id="jukebox" style="margin-left:2px;height:50px;width:50px;" src="jukebox.png"/>
+    <select id="jukebox_playlist">
+      <option value="off" selected="selected">off</option>
+      <option value="playlist_one" >playlist 1</option>
+      <option value="playlist_two">playlist 2</option>
+    </select>
   </div>
 	<div class="item title">
     <div id="ui">
