fill_alpha & clr_fill_border features w

--- a/index.html
+++ b/index.html
@@ -212,6 +212,19 @@
           </div>
         </div>
 
+        <div class="selector_input">
+          <div class="input_Xn">
+            <label for="alpha">&#945;</label>
+            <div class='slider_container'>
+              <input name='alpha' type="range" min="0" max="1" value="0.5" class="slider" step="0.1" id="fill_alpha">
+            </div>
+            <div style="display: flex; justify-content: center; align-items: center;">
+              <label for="clr_fill_border"></label>
+              <input class='bg' id='clr_fill_border' name="clr_fill_border" type="color" value="#050519"></input>
+            </div>
+          </div>
+        </div>
+
       <div id="made_by"></div>
     </div>
   </div>
