--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
   </div>
   <div class="item jukebox" style="display: inline-flex;">
-    <input type="image" id="jukebox" style="margin-left:2px;height:50px;width:50px;" src="jukebox.png"/>
+    <input type="image" class='jukebox_img' id="jukebox" src="jukebox.png"/>
     <select id="jukebox_playlist">
       <option value="off" selected="selected">off</option>
       <option value="playlist_one" >playlist 1</option>
