--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <div class="item jukebox" style="display: inline-flex;">
     <input type="image" class='jukebox_img' id="jukebox" src="jukebox.png"/>
     <select id="jukebox_playlist">
-      <option value="off" selected="selected">off</option>
+      <option value="off" selected="selected">Juke off</option>
       <option value="playlist_one" >playlist 1</option>
       <option value="playlist_two">playlist 2</option>
     </select>
