few layout changes

--- a/index.html
+++ b/index.html
@@ -214,12 +214,13 @@
 
         <div class="selector_input">
           <div class="input_Xn">
-            <label for="alpha">&#945;</label>
-            <div class='slider_container'>
+            <img style="margin-left:1px;height:20px;width:20px;" src="pallete.png"/>
+            <label for="alpha">fill &#945;</label>
+            <div class='slider_container' style="width: 120px;">
               <input name='alpha' type="range" min="0" max="1" value="0.5" class="slider" step="0.1" id="fill_alpha">
             </div>
             <div style="display: flex; justify-content: center; align-items: center;">
-              <label for="clr_fill_border"></label>
+              <label for="clr_fill_border">brd</label>
               <input class='bg' id='clr_fill_border' name="clr_fill_border" type="color" value="#050519"></input>
             </div>
           </div>
