few layout changes

--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
 
         <!--dropdown-->
         <div class="input_Xn" id='speed_box'>
-          <label for="animStep0">speed</label>
-          <select id="animStep0" name="animStep0">
+            <label for="animStep0">speed</label>
+            <select id="animStep0" name="animStep0">
             <option value="0.125">slow</option>
             <option value="0.500">med</option>
             <option value="1.000">fast</option>
@@ -136,7 +136,7 @@
               <option value=0.010>med</option>
               <option value=0.050>fast</option>
             </select>
-            <div>
+            <div class='margin_zero'>
               <label for="min_a"> min</label>
               <input type="text" class="a_text_input" value="1.001" name="min_a" id='a_min'>
               <label for="max_a"> max</label>
@@ -222,7 +222,7 @@
             <div class='slider_container' style="width: 120px;">
               <input name='alpha' type="range" min="0" max="1" value="0.5" class="slider" step="0.1" id="fill_alpha">
             </div>
-            <div style="display: flex; justify-content: center; align-items: center;">
+            <div class='margin_zero' style="justify-content: center; align-items: center;">
               <label for="clr_fill_border">brd</label>
               <input class='bg' id='clr_fill_border' name="clr_fill_border" type="color" value="#050519"></input>
             </div>
