added Pn tandem & corrected bug -> only first Pn text box was changing to black when selected

--- a/index.html
+++ b/index.html
@@ -166,6 +166,10 @@
               <label for="Tandem tri">tri</label>
               <input class = "sub_checkbox" type="checkbox" id="tandem_tri" name="Tandem tri">
             </div>
+            <div>
+              <label for="Tandem Pn">Pn</label>
+              <input class = "sub_checkbox" type="checkbox" id="tandem_pn" name="Tandem Pn">
+            </div>
           </div>
         </div>
         <!--End Tandem bar-->
