--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
   <script src="symmedian.js"></script>
   <script src="caustic.js"></script>
   <script src="export.js"></script>
+  <script src="circles.js"></script>
   <script src="locus.js"></script>
   <script src="draw.js"></script>
 
