chages in body width and height

--- a/index.html
+++ b/index.html
@@ -148,11 +148,11 @@
         <!--Tandem bar-->
         <div class="selector_input">
           <div class="input_Xn">
-            <div style="font-size: 17px;">
+            <div style="font-size: 14px;margin-top: auto;margin-bottom: auto;">
               tandem
             </div>
             <div>
-              <label for="Tandem loc">loc</label>
+              <label for="Tandem loc">ℒ</label>
               <input class = "sub_checkbox" type="checkbox" id="tandem_loc" name="Tandem loc">
             </div>
             <div>
