--- a/index.html
+++ b/index.html
@@ -56,12 +56,15 @@
   <script src="locus.js"></script>
   <script src="draw.js"></script>
 
+
   <script src="ellipse-mounted.js"></script>
   <script src="sketch.js"></script>
   <!-- <script src="gauss-jordan.js"></script> -->
   <script src="https://enkimute.github.io/res/linalg.min.js"></script>
   <script src="ellipse-detect.js"></script>
   <script src="simple-polygon-b.js"></script>
+  <script src="encode_to_url.js"></script>
+
 
 <section class="grid-container">
   <div class="item config_buttons">
