--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <script src="https://enkimute.github.io/res/linalg.min.js"></script>
   <script src="ellipse-detect.js"></script>
   <script src="simple-polygon-b.js"></script>
-  <script src="encode_to_url.js"></script>
+  <script src="configuration_url.js"></script>
 
 
 <section class="grid-container">
