colors invert button added

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
               <input class = "sub_checkbox" type="checkbox" id="ell" name="ell">
             </div>
             <div>
-              <label for="rot">rot</label>
+              <label for="rot"></label>
               <select id="rot" name="rot">
-                <option value="0">off</option>
+                <option value="0">rot off</option>
                 <option value="90">90°</option>
                 <option value="180">180°</option>
                 <option value="270">270°</option>
@@ -220,6 +220,10 @@
               <label for="bg">bg</label>
               <input class='bg' id='bg' name="bg" type="color" value="#050519"></input>
             </div>
+            <div style='display: inline-flex;margin-left:2px;margin-right:2px;flex-grow:1'>
+              <button class='small_button' id='invert_colors'>invert</button>
+            </div>
+            
           </div>
         </div>
 
