--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   <script src="configuration_url.js"></script>
 
 
-<section class="grid-container">
+<section id='grid-container' class="grid-container">
   <div class="item config_buttons">
     <div style="display: flex; flex-direction: column; height: 100%;">
       <button id='reset_UI'>reset UI</button>
@@ -83,6 +83,10 @@
 
   </div>
   <div class="item jukebox" style="display: inline-flex;">
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
+      <i class="fa fa-bars"></i>
+    </a>
     <input type="image" class='jukebox_img' id="jukebox" src="jukebox.png"/>
     <div style="display: flex; flex-direction: column;">
       <select id="jukebox_playlist">
@@ -101,7 +105,8 @@
      <p class="lab">© 2020 Iverton Darlan &amp; Dan Reznik</p>
     </div>
   </div>
-	<div class="item selector">
+  
+	<div id='menu' class="item selector">
 
         <!--dropdown-->
         <div class="input_Xn" id='speed_box'>
