--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
     </div>
   </div>
 	<div class="item graphic">
-    <div id="canvas"></div>
+    <div id="canvas" style="position: relative;"></div>
   </div>
 </section>
 
