adding loading while jukebox image is loading

--- a/index.html
+++ b/index.html
@@ -243,8 +243,12 @@
     </div>
   </div>
 	<div class="item graphic">
-    <div id="canvas"></div>
+    <div id="canvas" style="position: relative;"></div>
   </div>
 </section>
 
-</body></html>
+<div id="loader"></div>
+
+
+</body>
+</html>
