--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
 
 <section id='grid-container' class="grid-container">
-  <div class="item config_buttons">
+  <div class="item config_buttons" id='configButtons'>
     <div style="display: flex; flex-direction: column; height: 100%;">
       <button id='reset_UI'>reset UI</button>
       <button id='recenter'>center UI</button>
@@ -91,7 +91,34 @@
       <p id='output_text_jukebox'style="align-self: center;">Stopped</p>
     </div>
   </div>
-	<div class="item title">
+  
+  <div class="item hamburger">
+    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+    <a id = 'menuHamburguer' href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  
+  <div class="item playPause">
+    <!--dropdown-->
+    <div id='speed_box'>
+      <label for="animStep0">speed</label>
+      <select id="animStep0" name="animStep0">
+        <option value="0.125">slow</option>
+        <option value="0.500">med</option>
+        <option value="1.000">fast</option>
+      </select>
+      <!--play controls-->
+      <div class="play_controls">
+        <button class="fa fa-backward" id="backward"></button>
+        <button class="fa fa-play-circle-o" id="play_pause"></button>
+        <button class="fa fa-forward" id="forward"></button>
+      </div>
+      <!--end play contorls-->
+    </div>
+  </div>
+
+  <div class="item title">
     <div id="ui">
       <div class='lab' style='text-align: center'> 
         <p style='color: blue'>
@@ -103,24 +130,6 @@
   </div>
   
 	<div id='menu' class="item selector">
-
-        <!--dropdown-->
-        <div class="input_Xn" id='speed_box'>
-            <label for="animStep0">speed</label>
-            <select id="animStep0" name="animStep0">
-            <option value="0.125">slow</option>
-            <option value="0.500">med</option>
-            <option value="1.000">fast</option>
-          </select>
-          <!--play controls-->
-          <div class="play_controls">
-            <button class="fa fa-backward" id="backward"></button>
-            <button class="fa fa-play-circle-o" id="play_pause"></button>
-            <button class="fa fa-forward" id="forward"></button>
-          </div>
-          <!--end play contorls-->
-        </div>
-        <!--end drop down*/-->
         <!--sliders-->
         <!--Functions show_slider_output_value, -->
         <div class="selector_input">
@@ -249,10 +258,5 @@
 </section>
 
 <div id="loader"></div>
-
-<!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-<a id = 'menuHamburguer' href="javascript:void(0);" class="icon" onclick="hamburgerMenu()">
-  <i class="fa fa-bars"></i>
-</a>
 
 </body></html>
